--- a/index.html
+++ b/index.html
@@ -21,22 +21,57 @@
         <div class="Container">
 
             <section class="Section">
-                <h2 class="Section_Title">このページについて</h2>
+                <h2 class="Section_Title">GitHubとは？</h2>
                 <div class="Card">
                     <p>
-                        このWebサイトは、GitHub Pagesの機能デモンストレーション用に作成されました。
-                        リポジトリにプッシュされたHTMLとCSSファイルが、Webサイトとして自動的に公開されています。
+                        GitHubは、プログラムのソースコードを保存・管理・共有できるクラウドサービスです。
+                        世界中の開発者が利用する、開発プロジェクトの「拠点」のような場所です。
                     </p>
                 </div>
             </section>
 
             <section class="Section">
-                <h2 class="Section_Title">デモ機能</h2>
+                <h2 class="Section_Title">主な機能</h2>
 
                 <div class="Card">
-                    <h3 class="Card_Title">静的サイトホスティング</h3>
+                    <h3 class="Card_Title">核心機能「リポジトリ」 (ソースコード管理)</h3>
                     <p>
-                        サーバーを別途契約することなく、HTML, CSS, JavaScriptファイルのみで構成される「静的サイト」を無料で公開できます。
+                        プロジェクトのファイル(ソースコード、画像など)を保存する場所です。
+                        「いつ」「誰が」「何を」変更したか、すべての履歴(バージョン)を記録できます。
+                    </p>
+                    <ul class="Feature_List">
+                        <li>間違った変更をしても、過去の状態に簡単に戻せる。</li>
+                        <li>複数の開発者がいても、安全に共同作業ができる。</li>
+                    </ul>
+                </div>
+
+                <div class="Card">
+                    <h3 class="Card_Title">タスク管理「Issues / Projects」</h3>
+                    <p>
+                        開発でやるべき作業(タスク)やバグの報告を「Issue (イシュー)」として登録・管理できます。
+                        「Projects」機能を使うと、タスクをカンバンボード形式(「未着手」「作業中」「完了」)で管理できます。
+                    </p>
+                </div>
+                
+                <div class="Card">
+                    <h3 class="Card_Title">その他の便利な機能</h3>
+                    <ul class="Feature_List">
+                        <li><strong>GitHub Actions (自動化):</strong> コードが更新された時などに、テストやサーバーへの反映(デプロイ)といった作業を自動実行できます。</li>
+                        <li><strong>Pull Request (コードレビュー):</strong> 変更したコードを本体に取り込む前に、他の開発者が内容をチェック(レビュー)し、品質を保つための機能です。</li>
+                        <li><strong>Wiki (ドキュメント):</strong> プロジェクトの仕様書やマニュアル、メモなどをまとめておく場所として使えます。</li>
+                    </ul>
+                </div>
+
+            </section>
+
+            <section class="Section">
+                <h2 class="Section_Title">このデモページについて (GitHub Pages)</h2>
+
+                <div class="Card">
+                    <h3 class="Card_Title">Web公開「GitHub Pages」</h3>
+                    <p>
+                        リポジトリに保存したHTMLやCSS、画像ファイルを使って、Webサイトを無料でインターネットに公開できる機能です。
+                        サーバーを自分で契約・設定しなくても、簡単に Webページを公開できます。
                     </p>
                 </div>
 
@@ -55,6 +90,19 @@
                     </p>
                 </div>
 
+            </section>
+
+
+            <section class="Section">
+                <h2 class="Section_Title">まとめ</h2>
+                <div class="Card">
+                    <p>
+                        GitHubは単なる「置き場」ではなく、ソースコードのバージョン管理(リポジトリ)、タスク管理(Issues)、Web公開(Pages)、作業の自動化(Actions)など、開発に必要な多くの機能を提供する統合プラットフォームです。
+                    </p>
+                    <p class="Conclusion_Text">
+                        <strong>結論:</strong> GitHubを活用することで、個人でもチームでも、開発の効率と品質を大きく向上させることができます。
+                    </p>
+                </div>
             </section>
 
         </div>
